--- a/res/layout/activity_main_menu.xml
+++ b/res/layout/activity_main_menu.xml
@@ -7,30 +7,31 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:screenOrientation="portrait"
-    android:configChanges="keyboardHidden|orientation|screenSize">
-    tools:context=".MainMenu" >
-
+   tools:context=".MainMenu"
+    android:configChanges="keyboardHidden|orientation|screenSize"
+    android:background="@drawable/bck"
+     >
     
+ 
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="108dp"
+         android:onClick="play"
+        android:text="@string/play" />
 
-    <TextView
-        android:id="@+id/textView3"
+    <Button
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:clickable="true"
-        android:onClick="play"
-        android:text="@string/play" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
         android:onClick="ranking"
-        android:layout_above="@+id/textView3"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_marginBottom="84dp"
         android:text="@string/ranking" />
+
+
 
 </RelativeLayout>
