--- a/res/layout/activity_ranking.xml
+++ b/res/layout/activity_ranking.xml
@@ -6,6 +6,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:screenOrientation="portrait"
+    android:configChanges="keyboardHidden|orientation|screenSize"
+    
     android:background="@drawable/bck"
     tools:context=".Ranking" >
 
